# chai

./: .dockerignore  .gitignore  .ruff.toml  LICENSE  README.md  docker-compose.yml  pkgx.yaml  pyproject.toml
.github/workflows/: chai-api.ci.yml
alembic/: .pkgx.yaml  Dockerfile  README.md  alembic.ini  env.py  init-script.sql  load-values.sql  run_migrations.sh
alembic/versions/: 20240918_1200-initial_migration.py  20240923_0821-add_load_history.py  20240925_0808-add_users_urls.py  20240930_2034-link_tables_add_unique_constraints.py  20241002_1456-new_data_models_and_indexes.py  20241003_0040-import_id_for_versions.py  20241003_1554-redo_data_model.py  20241009_0915-modify_users_username_uniqueness.py  20241009_1713-url_is_not_unique.py  20241010_1347-add_license_name_and_id_index.py  20241018_0815-check_default_server_types.py  20241021_0803-package_managers_should_be_unique.py  20241028_1217-base_migration.py
api/: .dockerignore  Cargo.toml  Dockerfile  README.md
api/src/: app_state.rs  db.rs  handlers.rs  logging.rs  main.rs  utils.rs
core/: README.md  config.py  db.py  fetcher.py  logger.py  scheduler.py  structs.py  transformer.py  utils.py
core/models/: __init__.py
db/: README.md  queries.md
examples/sbom-meta/: README.md  go.mod  go.sum  main.go
examples/visualizer/: README.md  main.py  monitor.py
monitor/: Dockerfile  main.py  requirements.txt  run_monitor.sh
package_managers/crates/: Dockerfile  README.md  main.py  requirements.txt  structs.py  transformer.py
package_managers/homebrew/: Dockerfile  README.md  pipeline.sh  schedule.sh
package_managers/homebrew/jq/: dependencies.jq  package_url.jq  packages.jq  urls.jq  versions.jq
package_managers/homebrew/sql/: homebrew_vars.sql
src/: .pkgx.yaml  Dockerfile  requirements.txt  run_pipeline.sh  run_scheduler.py
src/pipeline/: crates.py  main.py  pkgx.py
src/pipeline/crates/: transformer.py
src/pipeline/models/: __init__.py
src/pipeline/utils/: fetcher.py  logger.py  pg.py  transformer.py  utils.py
src/pipeline/utils/crates/: structures.py  transformer.py  transformer_v2.py
src/reader/: reader.py
src/reader/crates/: reader.py
tests/: test_crates_reader.py
