[project]
name = "pipeline"
version = "0.1.0"
dependencies = [
    "alembic~=1.12",
    "pyyaml~=6.0",
    "psycopg2~=2.9",
    "requests~=2.31",
    "ruff~=0.6",
    "sqlalchemy~=2.0",
]
requires-python = "~=3.11"
authors = [{ name = "Sanchit Ram Arvind", email = "sanchit@pkgx.dev" }]
maintainers = [{ name = "Sanchit Ram Arvind", email = "sanchit@pkgx.dev" }]
description = "the open-source package data pipeline"
readme = "README.md"
keywords = ["tea", "package managerment", "data pipeline"]

[project.urls]
Homepage = "https://tea.xyz"
Repository = "https://github.com/teaxyz/chai.git"

[project.scripts]
# only useful for local development
chai-pipeline-fetch = "pipeline.main:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src", "."]
testpaths = ["tests"]
